--- a/story1.html
+++ b/story1.html
@@ -40,13 +40,11 @@
       </div>
     </div>
   </header>
-  <!-- <button onclick="goToNextChapter()">Next Chapter</button>
-  <button onclick="goToPreviousChapter()">Previous Chapter</button> -->
 
   <script>
     // Function to navigate to the next chapter
     function goToNextChapter() {
-      window.location.href = "index.html";
+      window.location.href = "story2.html";
     }
 
     // Function to navigate to the previous chapter
@@ -217,8 +215,15 @@
           
           BUT….
           AS NOW, I AM SAYING THIS IS MY PROMISE.
-          -Ayush Kumar Choudhary.
         </pre>
+        <hr>
+        <div style="text-align:right ;">
+          Ayush Kumar Choudhary
+        </div>
+      </div>
+      <div class="snav">
+        <button class="snav-button" onclick="goToPreviousChapter()"><img src="images/prevarrow.png" style="height: 20px; width:20px;"><p>Prev</p></button>
+        <button class="snav-button" onclick="goToNextChapter()">Next<img src="images/nextarrow.png" style="height: 20px; width:20px;"></button>
       </div>
     </div>
   </section>
