--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Font awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
+    <script src="route.js"></script>
   </head>
   <body>
 
@@ -31,8 +32,7 @@
           <p>Spin your story, share your world, let it take flight</p>
           <form>
             <input type = "text" class = "search-input" placeholder="find your treaure of words . . .">
-            <button type = "submit" class = "search-btn">
-              <i class = "fas fa-search"></i>
+            <button type = "submit" class = "search-btn"><img src="images/search.png">
             </button>
           </form>
         </div>
@@ -52,24 +52,24 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/art-design-1.jpg" alt = "">
+              <img src = "images/art-design-1.jpg" alt = "" onlcick="return goToStory1()">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
             <div class = "design-title">
-              <a href = "#">make an awesome art portfolio for college or university</a>
+              <a href = "story1.html">Dubai Is On!!!!</a>
             </div>
           </div>
           <!-- end of item -->
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/art-design-2.jpg" alt = "">
+              <img src = "images/art-design-2.jpg" alt = "" onlcick="return goToStory2()">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
             <div class = "design-title">
-              <a href = "#">make an awesome art portfolio for college or university</a>
+              <a href = "story2.html">Moonlit Serenade</a>
             </div>
           </div>
           <!-- end of item -->
@@ -114,7 +114,7 @@
             <div class = "design-img">
               <img src = "images/art-design-6.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
-              <span>Woven Stories</span>
+              <span>Tales Spinner</span>
             </div>
             <div class = "design-title">
               <a href = "#">make an awesome art portfolio for college or university</a>
