--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href = "">home</a>
             <a href = "#story">stories</a>
             <a href = "#about">about</a>
+            <a href = "post.html">Write-Your-Story</a>
           </div>
         </div>
       </nav>
@@ -51,8 +52,8 @@
         <div class = "design-content">
           <!-- item -->
           <div class = "design-item">
-            <div class = "design-img">
-              <img src = "images/art-design-1.jpg" alt = "" onlcick="return goToStory1()">
+            <div class = "design-img" onclick="return goToStory1()">
+              <img src = "images/art-design-1.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
@@ -63,8 +64,8 @@
           <!-- end of item -->
           <!-- item -->
           <div class = "design-item">
-            <div class = "design-img">
-              <img src = "images/art-design-2.jpg" alt = "" onlcick="return goToStory2()">
+            <div class = "design-img" onclick="return goToStory2()">
+              <img src = "images/art-design-2.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
@@ -75,49 +76,49 @@
           <!-- end of item -->
           <!-- item -->
           <div class = "design-item">
-            <div class = "design-img">
+            <div class = "design-img" onclick="return goToStory3()">
               <img src = "images/art-design-3.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
             <div class = "design-title">
-              <a href = "#">make an awesome art portfolio for college or university</a>
+              <a href = "story3.html">Zombie Heist</a>
             </div>
           </div>
           <!-- end of item -->
           <!-- item -->
           <div class = "design-item">
-            <div class = "design-img">
+            <div class = "design-img" onclick="return goToStory4()">
               <img src = "images/art-design-4.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
             <div class = "design-title">
-              <a href = "#">make an awesome art portfolio for college or university</a>
+              <a href = "story4.html">Echoes of the Haunted Manor</a>
             </div>
           </div>
           <!-- end of item -->
           <!-- item -->
           <div class = "design-item">
-            <div class = "design-img">
+            <div class = "design-img" onclick="return goToStory5()">
               <img src = "images/art-design-5.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Woven Stories</span>
             </div>
             <div class = "design-title">
-              <a href = "#">make an awesome art portfolio for college or university</a>
+              <a href = "story5.html">HurtBeat</a>
             </div>
           </div>
           <!-- end of item -->
           <!-- item -->
           <div class = "design-item">
-            <div class = "design-img">
+            <div class = "design-img" onclick="return goToEnd()">
               <img src = "images/art-design-6.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>Tales Spinner</span>
             </div>
             <div class = "design-title">
-              <a href = "#">make an awesome art portfolio for college or university</a>
+              <a href = "end.html">More Stories Coming Soon...</a>
             </div>
           </div>
           <!-- end of item -->
