--- a/story3.html
+++ b/story3.html
@@ -27,7 +27,7 @@
             <a href="">stories</a>
             <a href="">about</a>
           </div>
-          <a href="story2.html" class="nav-button">Next story</a>
+          <a href="story4.html" class="nav-button">Next-story</a>
         </div>
       </div>
     </nav>
@@ -37,6 +37,8 @@
         <h1 class="banner-title">
             ZOMBIE HEIST
         </h1>
+        <hr>
+        <p>Amar, struggling to afford a school trip to Dubai, reluctantly agrees to do dangerous tasks for a gang leader. As events spiral out of control, including a violent encounter and a chaotic escape attempt, Amar completes the tasks but discovers a surprising betrayal from his friend Anthony, leading to a dramatic resolution.</p>
       </div>
     </div>
   </header>
