--- a/story1.html
+++ b/story1.html
@@ -37,6 +37,8 @@
         <h1 class="banner-title">
           DUBAI IS ON
         </h1>
+        <hr>
+        <p>Amar, struggling to afford a school trip to Dubai, reluctantly agrees to do dangerous tasks for a gang leader. As events spiral out of control, including a violent encounter and a chaotic escape attempt, Amar completes the tasks but discovers a surprising betrayal from his friend Anthony, leading to a dramatic resolution.</p>
       </div>
     </div>
   </header>
