Add new stories and navigation links

--- a/end.html
+++ b/end.html
@@ -18,9 +18,8 @@
         <div class = "container">
           <a href = "index.html" class = "navbar-brand">TaleSpinner</a>
           <div class = "navbar-nav">
-            <a href = "">home</a>
-            <a href = "#story">stories</a>
-            <a href = "#about">about</a>
+            <a href = "index.html">home</a>
+            <a href = "post.html">Previous-Story</a>
             <a href = "post.html">Write-Your-Story</a>
           </div>
         </div>
