--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <h2>Dubai is On!!!</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Read More</a>
+              <a href = "story1.html">Read More</a>
             </div>
           </div>
           <!-- end of item -->
@@ -158,9 +158,9 @@
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <h2>Moonlit Serenade</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Read More</a>
+              <a href = "story2.html">Read More</a>
             </div>
           </div>
           <!-- end of item -->
@@ -172,9 +172,9 @@
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <h2>Zombie Heist</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Read More</a>
+              <a href = "story3.html">Read More</a>
             </div>
           </div>
           <!-- end of item -->
@@ -186,9 +186,9 @@
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <h2>Echoes of the Haunted Manor</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Read More</a>
+              <a href = "story4.html">Read More</a>
             </div>
           </div>
           <!-- end of item -->
@@ -200,9 +200,9 @@
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <h2>HurtBeat</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Read More</a>
+              <a href = "story5.html">Read More</a>
             </div>
           </div>
           <!-- end of item -->
@@ -214,9 +214,9 @@
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <h2>More to come, Soon...</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Read More</a>
+              <a href = "end.html">Read More</a>
             </div>
           </div>
           <!-- end of item -->
