--- a/story1.html
+++ b/story1.html
@@ -22,10 +22,10 @@
         <a href="index.html" class="navbar-brand">TaleSpinner</a>
         <div class="navbar-nav">
           <!-- <a href="" class="nav-button">Previous story</a> -->
-          <div class="" middle-nav">
+          <div class=" middle-nav">
             <a href="index.html">home</a>
-            <a href="">stories</a>
-            <a href="">about</a>
+            <a href="index.html">stories</a>
+            <a href="index.html">about</a>
           </div>
           <a href="story2.html" class="nav-button">Next story</a>
         </div>
@@ -230,3 +230,4 @@
     </div>
   </section>
 </body>
+</html>
