--- a/story2.html
+++ b/story2.html
@@ -51,7 +51,7 @@
 
         // Function to navigate to the previous chapter
         function goToPreviousChapter() {
-            window.location.href = "story.html";
+            window.location.href = "story1.html";
         }
     </script>
     <section>
