--- a/story5.html
+++ b/story5.html
@@ -46,7 +46,7 @@
   <script>
     // Function to navigate to the next chapter
     function goToNextChapter() {
-      window.location.href = "story.html";
+      window.location.href = "end.html";
     }
 
     // Function to navigate to the previous chapter
