--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Bring your stories to life</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font awesome icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="route.js"></script>
   </head>
   <body>
@@ -53,9 +54,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img" onclick="return goToStory1()">
-              <img src = "images/art-design-1.jpg" alt = "">
-              <span><i class = "far fa-heart"></i> 22</span>
-              <span>Woven Stories</span>
+              <img src = "images/art-design-1.jpg">
             </div>
             <div class = "design-title">
               <a href = "story1.html">Dubai Is On!!!!</a>
@@ -66,8 +65,6 @@
           <div class = "design-item">
             <div class = "design-img" onclick="return goToStory2()">
               <img src = "images/art-design-2.jpg" alt = "">
-              <span><i class = "far fa-heart"></i> 22</span>
-              <span>Woven Stories</span>
             </div>
             <div class = "design-title">
               <a href = "story2.html">Moonlit Serenade</a>
@@ -78,8 +75,6 @@
           <div class = "design-item">
             <div class = "design-img" onclick="return goToStory3()">
               <img src = "images/art-design-3.jpg" alt = "">
-              <span><i class = "far fa-heart"></i> 22</span>
-              <span>Woven Stories</span>
             </div>
             <div class = "design-title">
               <a href = "story3.html">Zombie Heist</a>
@@ -90,8 +85,6 @@
           <div class = "design-item">
             <div class = "design-img" onclick="return goToStory4()">
               <img src = "images/art-design-4.jpg" alt = "">
-              <span><i class = "far fa-heart"></i> 22</span>
-              <span>Woven Stories</span>
             </div>
             <div class = "design-title">
               <a href = "story4.html">Echoes of the Haunted Manor</a>
@@ -102,8 +95,6 @@
           <div class = "design-item">
             <div class = "design-img" onclick="return goToStory5()">
               <img src = "images/art-design-5.jpg" alt = "">
-              <span><i class = "far fa-heart"></i> 22</span>
-              <span>Woven Stories</span>
             </div>
             <div class = "design-title">
               <a href = "story5.html">HurtBeat</a>
@@ -114,8 +105,6 @@
           <div class = "design-item">
             <div class = "design-img" onclick="return goToEnd()">
               <img src = "images/art-design-6.jpg" alt = "">
-              <span><i class = "far fa-heart"></i> 22</span>
-              <span>Tales Spinner</span>
             </div>
             <div class = "design-title">
               <a href = "end.html">More Stories Coming Soon...</a>
@@ -140,7 +129,7 @@
           <div class = "story-item">
             <div class = "story-img">
               <img src = "images/art-design-3.jpg" alt = "">
-              <span><i class = "far fa-heart"></i></span>
+              <span><i class = "heart far fa-heart"></i></span>
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
@@ -154,7 +143,7 @@
           <div class = "story-item">
             <div class = "story-img">
               <img src = "images/art-design-2.jpg" alt = "">
-              <span><i class = "far fa-heart"></i></span>
+              <span><i class = "heart far fa-heart"></i></span>
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
@@ -168,7 +157,7 @@
           <div class = "story-item">
             <div class = "story-img">
               <img src = "images/art-design-1.jpg" alt = "">
-              <span><i class = "far fa-heart"></i></span>
+              <span><i class = " heart far fa-heart"></i></span>
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
@@ -182,7 +171,7 @@
           <div class = "story-item">
             <div class = "story-img">
               <img src = "images/art-design-6.jpg" alt = "">
-              <span><i class = "far fa-heart"></i></span>
+              <span><i class = "heart far fa-heart"></i></span>
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
@@ -196,7 +185,7 @@
           <div class = "story-item">
             <div class = "story-img">
               <img src = "images/art-design-5.jpg" alt = "">
-              <span><i class = "far fa-heart"></i></span>
+              <span><i class = "heart far fa-heart"></i></span>
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
@@ -210,7 +199,7 @@
           <div class = "story-item">
             <div class = "story-img">
               <img src = "images/art-design-4.jpg" alt = "">
-              <span><i class = "far fa-heart"></i></span>
+              <span><i class = "heart far fa-heart"></i></span>
             </div>
             <div class = "story-text">
               <span>20 January, 2020</span>
@@ -253,4 +242,12 @@
     
     
   </body>
+
+  <script>
+    $(document).ready(function(){
+      $(".heart").click(function(){
+        $(this).toggleClass("far fas");
+      })
+    })
+  </script>
 </html>
