--- a/end.html
+++ b/end.html
@@ -21,6 +21,7 @@
             <a href = "index.html">home</a>
             <a href = "post.html">Previous-Story</a>
             <a href = "post.html">Write-Your-Story</a>
+            <a href = "login_3.html">Log-Out</a>
           </div>
         </div>
       </nav>
