--- a/login_3.html
+++ b/login_3.html
@@ -24,7 +24,7 @@
             <button type="submit" class="btn">Login</button>
         </form>
         <div class="text-center mt-3 signup-link">
-            New to KinKeeper? Click <a href="signup_3.html">here</a> to sign up.
+            New to TaleSpinner? Click <a href="signup_3.html">here</a> to sign up.
         </div>
     </div>
 
