--- a/post.html
+++ b/post.html
@@ -91,8 +91,10 @@
                 <h1 class="banner-title">
                     <span>Tale</span>Spinner
                 </h1>
-                <p>Let your words flow as free as the rivers do.<br><hr>
-                    <a href="#form">Write your story here</a></p>
+                <p>Let your words flow as free as the rivers do.<br>
+                    <hr>
+                    <a href="#form">Write your story here</a>
+                </p>
             </div>
         </div>
     </header>
@@ -125,6 +127,14 @@
         </div>
     </section>
     <!-- End of Form -->
+
+    <!-- footer -->
+    <footer>
+        <span>TaleSpinner Official Page</span>
+        <br>
+        <span><a href="login_3.html">Log Out</a></span>
+    </footer>
+    <!-- end of footer -->
 
 </body>
 
