--- a/test.html
+++ b/test.html
@@ -46,6 +46,13 @@
       </div>
     </div>
   </section>
+  <!-- footer -->
+  <footer>
+    <span>TaleSpinner Official Page</span>
+    <br>
+    <span><a href="login_3.html">Log Out</a></span>
+</footer>
+<!-- end of footer -->
 
   <script>
     function goToNextChapter() {
