--- a/story1.html
+++ b/story1.html
@@ -229,5 +229,12 @@
       </div>
     </div>
   </section>
+  <!-- footer -->
+  <footer>
+    <span>TaleSpinner Official Page</span>
+    <br>
+    <span><a href="login_3.html">Log Out</a></span>
+</footer>
+<!-- end of footer -->
 </body>
 </html>
