--- a/story2.html
+++ b/story2.html
@@ -155,4 +155,12 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+    <footer>
+        <span>TaleSpinner Official Page</span>
+        <br>
+        <span><a href="login_3.html">Log Out</a></span>
+    </footer>
+    <!-- end of footer -->
 </body>
+</html>
