--- a/story4.html
+++ b/story4.html
@@ -134,4 +134,11 @@
       </div>
     </div>
   </section>
+  <!-- footer -->
+  <footer>
+    <span>TaleSpinner Official Page</span>
+    <br>
+    <span><a href="login_3.html">Log Out</a></span>
+</footer>
+<!-- end of footer -->
 </body>
